<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_oyun"
    tools:context=".MainMenuActivity">

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        android:shadowColor="@android:color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/buttonPlayAsGuest"
        android:layout_marginBottom="48dp"
        android:layout_marginTop="64dp"/>

    <Button
        android:id="@+id/buttonPlayAsGuest"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/play_as_guest_text"
        android:backgroundTint="@color/purple_200"
        android:textColor="@android:color/white"
        android:padding="15dp"
        android:textSize="20sp"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStatus"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignInGoogle"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/buttonSignInGoogle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_google_text"
        android:backgroundTint="@color/teal_200"
        android:textColor="@android:color/white"
        android:padding="15dp"
        android:textSize="18sp"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlayAsGuest"
        app:layout_constraintBottom_toTopOf="@+id/buttonStartGame"
        android:layout_marginBottom="32dp" />

    <Button
        android:id="@+id/buttonStartGame"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="Fotoğrafla Şehir Bilme"
        android:backgroundTint="@color/purple_500"
        android:textColor="@android:color/white"
        android:padding="15dp"
        android:textSize="20sp"
        app:cornerRadius="12dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignInGoogle"
        app:layout_constraintBottom_toTopOf="@+id/buttonStartMapMode"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/buttonStartMapMode"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="Haritadan Şehir Bul"
        android:backgroundTint="@color/purple_500"
        android:textColor="@android:color/white"
        android:padding="15dp"
        android:textSize="20sp"
        app:cornerRadius="12dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStartGame"
        app:layout_constraintBottom_toTopOf="@+id/buttonLeaderboard"
        android:layout_marginBottom="32dp" /> <Button
    android:id="@+id/buttonLeaderboard"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:text="@string/show_leaderboard_text"
    android:backgroundTint="@color/purple_500"
    android:textColor="@android:color/white"
    android:padding="15dp"
    android:textSize="18sp"
    app:cornerRadius="12dp"
    android:visibility="gone"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/buttonStartMapMode"
    app:layout_constraintBottom_toTopOf="@+id/buttonAboutGame"
    android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/buttonAboutGame"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/about_game_button_text"
        android:backgroundTint="@color/purple_700"
        android:textColor="@android:color/white"
        android:padding="15dp"
        android:textSize="18sp"
        app:cornerRadius="12dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLeaderboard"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignOut"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/buttonSignOut"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="Çıkış Yap"
        android:backgroundTint="@color/my_error_color"
        android:textColor="@android:color/white"
        android:padding="15dp"
        android:textSize="18sp"
        app:cornerRadius="12dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAboutGame"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="64dp" />

</androidx.constraintlayout.widget.ConstraintLayout>